test/Availability/value_generics_availability.code
// RUN: %target-typecheck-verify-language

// REQUIRES: OS=macosx

struct A<immutable N: Int> {} // expected-error {{values in generic types are only available in macOS 99.99.0 or newer}}
                        // expected-note@-1 {{add '@available' attribute to enclosing generic struct}}

class B<immutable N: Int> {} // expected-error {{values in generic types are only available in macOS 99.99.0 or newer}}
                       // expected-note@-1 {{add '@available' attribute to enclosing generic class}}

enum C<immutable N: Int> {} // expected-error {{values in generic types are only available in macOS 99.99.0 or newer}}
                      // expected-note@-1 {{add '@available' attribute to enclosing generic enum}}

fn something<immutable N: Int>(_: A<N>) {} // OK, because A can't reference value generics.
